--- a/index.html
+++ b/index.html
@@ -3,3 +3,5 @@ Last two numbers of WWE's Godfathers birth year? [2][1]
 Last two numbers of Sebastian Stans birth year? [4][6]
 
 Passcode: [ORDER]
+
+Maybe visit a gallery?
