--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 Last two numbers of Dan's birth year? [5][3]
 Last two numbers of WWE's Godfathers birth year? [2][1]
 Last two numbers of Sebastian Stans birth year? [4][6]
+Last two numbers of Stone Colds birth year? [8][7]
 
-Passcode: [ORDER]
+Passcode: [ORDER 1,2,3...]
 
 Maybe visit a gallery?
